# AVPE_Backend

./: .gitignore  ANIME_GENERATION_GUIDE.md  ANIME_GENERATION_SUMMARY.md  ANIME_QUICK_REFERENCE.md  API_PARAMETERS_REMOVED.md  AUTO_GENERATION_GUIDE.md  BUGFIX_CHARACTER_NAME_MAPPING.md  CAMERA_GUIDANCE_SUMMARY.md  CHARACTER_ANALYSIS_SIMPLIFIED.md  CHARACTER_CRUD_API_DOCUMENTATION.md  CHARACTER_CRUD_IMPLEMENTATION_COMPLETE.md  CHARACTER_CRUD_QUICK_REFERENCE.md  CHARACTER_ID_FIX_SUMMARY.md  CHARACTER_ID_REMOVAL_SUMMARY.md  CHARACTER_IMAGE_CREATION_GUIDE.md  CHARACTER_IMAGE_IMPLEMENTATION_SUMMARY.md  CHARACTER_IMAGE_QUICK_START.md  CHARACTER_IMAGE_VISUAL_FLOW.md  CHARACTER_LIST_FIELDS_FIX.md  CHARACTER_NAME_MAPPING_FIX_VISUAL.md  CINEMATIC_CAMERA_UPDATE.md  CLEAN_2_STEP_FINAL.md  CONNECTORS_ARCHITECTURE.md  CONNECTORS_COMPLETE.md  CONNECTORS_REFACTORING_SUMMARY.md  CONTENT_TYPE_PROMPT_UPDATE.md  CONTINUITY_GUIDANCE_SUMMARY.md  CORRECTED_FRAME_FLOW.md  CUSTOM_CHARACTER_ROSTER_GUIDE.md  CUSTOM_CHARACTER_ROSTER_README.md  CUSTOM_ROSTER_IMPLEMENTATION_SUMMARY.md  CUSTOM_ROSTER_VISUAL_GUIDE.md  DAILY_CHARACTER_GUIDE.md  DAILY_CHARACTER_QUICK_REF.md  DAILY_CHARACTER_SUMMARY.md  DOWNLOAD_ENDPOINT_SUMMARY.md  FEATURE_COMPLETE.md  FILE_STORAGE_MANAGER_GUIDE.md  FILE_STORAGE_MIGRATION.md  FINAL_2_STEP_IMPLEMENTATION.md  (+89 more)
generated_movie_script/: Bloom_Under_the_Harvest_Moon_set_01.json  Bloom_Under_the_Harvest_Moon_set_02.json  Bloom_Under_the_Harvest_Moon_set_03.json  Bloom_Under_the_Harvest_Moon_set_04.json  Bloom_Under_the_Harvest_Moon_set_05.json  (+91 more)
src/: dev.py  main.py
(+59 files in other folders)
